--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-node_modules
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
