--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-amplify/\#current-cloud-backend
+amplify/#current-cloud-backend
 amplify/.config/local-*
 amplify/backend/amplify-meta.json
 amplify/backend/awscloudformation
