grant iot access to panorama service

--- a/amplify/backend/custom/customResource291b215b/customResource291b215b-cloudformation-template.yaml
+++ b/amplify/backend/custom/customResource291b215b/customResource291b215b-cloudformation-template.yaml
@@ -173,6 +173,9 @@ Resources:
               - Effect: Allow
                 Action: ssm:*
                 Resource: "*"
+              - Effect: Allow
+                Action: iot:*
+                Resource: "*"
   WebAppSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
