--- a/amplify/backend/custom/customResource291b215b/customResource291b215b-cloudformation-template.yaml
+++ b/amplify/backend/custom/customResource291b215b/customResource291b215b-cloudformation-template.yaml
@@ -57,6 +57,8 @@ Resources:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
               SSEAlgorithm: AES256
+      VersioningConfiguration:
+        Status: Enabled
   S3BucketPanoramaAppCreation:
     Type: AWS::S3::Bucket
     Properties:
@@ -71,6 +73,8 @@ Resources:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
               SSEAlgorithm: AES256
+      VersioningConfiguration:
+        Status: Enabled
   S3BucketEventCreation:
     Type: AWS::S3::Bucket
     Properties:
@@ -85,6 +89,8 @@ Resources:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
               SSEAlgorithm: AES256
+      VersioningConfiguration:
+        Status: Enabled
   S3BucketExportEventCreation:
     Type: AWS::S3::Bucket
     Properties:
@@ -99,6 +105,8 @@ Resources:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
               SSEAlgorithm: AES256
+      VersioningConfiguration:
+        Status: Enabled
   S3BucketAppGraphCreation:
     Type: AWS::S3::Bucket
     Properties:
@@ -113,6 +121,8 @@ Resources:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
               SSEAlgorithm: AES256
+      VersioningConfiguration:
+        Status: Enabled
   S3BucketModelPretrainCreation:
     Type: AWS::S3::Bucket
     Properties:
@@ -127,6 +137,8 @@ Resources:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
               SSEAlgorithm: AES256
+      VersioningConfiguration:
+        Status: Enabled
   S3BucketModelRetrainCreation:
     Type: AWS::S3::Bucket
     Properties:
@@ -141,6 +153,8 @@ Resources:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
               SSEAlgorithm: AES256
+      VersioningConfiguration:
+        Status: Enabled
   SageMakerRole:
     Type: AWS::IAM::Role
     Properties:
@@ -164,8 +178,13 @@ Resources:
                 Action: sagemaker:*
                 Resource: "*"
               - Effect: Allow
-                Action: iam:*
-                Resource: "*"
+                Action: iam:PassRole
+                Resource:
+                  Fn::Join:
+                    - ""
+                    - - "arn:aws:iam::"
+                      - !Ref "AWS::AccountId"
+                      - :role/amplifyppetest1LambdaRole*"
               - Effect: Allow
                 Action: s3:*
                 Resource: "*"
@@ -269,10 +288,6 @@ Resources:
                 sudo git clone
                 https://github.com/hardco2020/ppa_model_script.git
                 /home/ec2-user/ppa/
-              - |
-                bash matlab_pull_and_push.sh ap-southeast-1
-              - |
-                bash gary_pull_and_push.sh ap-southeast-1
               - aws s3 cp training-input/ s3://
               - Ref: S3BucketModelPretrainCreation
               - |
