add group in inline policy

--- a/amplify/backend/custom/customResource291b215b/customResource291b215b-cloudformation-template.yaml
+++ b/amplify/backend/custom/customResource291b215b/customResource291b215b-cloudformation-template.yaml
@@ -158,6 +158,8 @@ Resources:
   PpeAccessPolicy:
     Type: AWS::IAM::Policy
     Properties:
+      Groups:
+        - PPEGroup
       PolicyDocument:
         Version: "2012-10-17"
         Statement:
