--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@ dist/
 release/
 
 #amplify
+amplify/team-provider-info.json
 amplify/\#current-cloud-backend
-amplify/.config/local-*
+amplify/.config
+.config
 amplify/mock-data
 amplify/backend/amplify-meta.json
 amplify/backend/awscloudformation
@@ -17,3 +19,7 @@ amplifyconfiguration.json
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
+amplify/backend/function/*/src/node_modules/
+amplify/backend/function/*/dist/
+amplify/.config/local-aws-info.json
+amplify/.config/local-env-info.json
