make amplify to have multiple in one region

--- a/amplify/backend/custom/customResource291b215b/customResource291b215b-cloudformation-template.yaml
+++ b/amplify/backend/custom/customResource291b215b/customResource291b215b-cloudformation-template.yaml
@@ -1,4 +1,4 @@
-AWSTemplateFormatVersion: "2010-09-09"
+AWSTemplateFormatVersion: '2010-09-09'
 Description: >-
   {"createdOn":"Mac","createdBy":"Amplify","createdWith":"9.1.0","stackType":"custom-customCloudformation","metadata":{}}
 Parameters:
@@ -10,9 +10,9 @@ Resources:
   EnvParameter:
     Type: AWS::SSM::Parameter
     Properties:
-      Name: 
+      Name:
         Fn::Join:
-          - "/"
+          - /
           - - /ppe/env
             - Ref: env
       Type: String
@@ -24,9 +24,9 @@ Resources:
   RandomParameter:
     Type: AWS::SSM::Parameter
     Properties:
-      Name: 
+      Name:
         Fn::Join:
-          - "/"
+          - /
           - - /ppe/random
             - Ref: env
       Type: String
@@ -42,9 +42,9 @@ Resources:
   SageMakerParameter:
     Type: AWS::SSM::Parameter
     Properties:
-      Name: /ppe/config/arn
+      Name:
         Fn::Join:
-          - "/"
+          - /
           - - /ppe/config/arn
             - Ref: env
       Type: String
@@ -60,7 +60,7 @@ Resources:
     Properties:
       BucketName:
         Fn::Join:
-          - "-"
+          - '-'
           - - ppebucket
             - Fn::GetAtt:
                 - RandomParameter
@@ -76,7 +76,7 @@ Resources:
     Properties:
       BucketName:
         Fn::Join:
-          - "-"
+          - '-'
           - - panorama-app
             - Fn::GetAtt:
                 - RandomParameter
@@ -92,7 +92,7 @@ Resources:
     Properties:
       BucketName:
         Fn::Join:
-          - "-"
+          - '-'
           - - event
             - Fn::GetAtt:
                 - RandomParameter
@@ -108,7 +108,7 @@ Resources:
     Properties:
       BucketName:
         Fn::Join:
-          - "-"
+          - '-'
           - - export-event
             - Fn::GetAtt:
                 - RandomParameter
@@ -124,7 +124,7 @@ Resources:
     Properties:
       BucketName:
         Fn::Join:
-          - "-"
+          - '-'
           - - app-graph
             - Fn::GetAtt:
                 - RandomParameter
@@ -140,7 +140,7 @@ Resources:
     Properties:
       BucketName:
         Fn::Join:
-          - "-"
+          - '-'
           - - pretraininput
             - Fn::GetAtt:
                 - RandomParameter
@@ -156,7 +156,7 @@ Resources:
     Properties:
       BucketName:
         Fn::Join:
-          - "-"
+          - '-'
           - - retrainoutput
             - Fn::GetAtt:
                 - RandomParameter
@@ -171,7 +171,7 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
-        Version: "2012-10-17"
+        Version: '2012-10-17'
         Statement:
           - Effect: Allow
             Principal:
@@ -184,45 +184,45 @@ Resources:
       Policies:
         - PolicyName: root
           PolicyDocument:
-            Version: "2012-10-17"
+            Version: '2012-10-17'
             Statement:
               - Effect: Allow
                 Action: sagemaker:*
-                Resource: "*"
+                Resource: '*'
               - Effect: Allow
                 Action: iam:PassRole
                 Resource:
                   Fn::Join:
-                    - ""
-                    - - "arn:aws:iam::"
-                      - !Ref "AWS::AccountId"
-                      - :role/amplifyppetest1LambdaRole*"
+                    - ''
+                    - - 'arn:aws:iam::'
+                      - Ref: AWS::AccountId
+                      - ':role/amplifyppetest1LambdaRole*"'
               - Effect: Allow
                 Action: s3:*
-                Resource: "*"
+                Resource: '*'
               - Effect: Allow
                 Action: ecr:*
-                Resource: "*"
+                Resource: '*'
               - Effect: Allow
                 Action: lambda:*
-                Resource: "*"
+                Resource: '*'
               - Effect: Allow
                 Action: panorama:*
-                Resource: "*"
+                Resource: '*'
               - Effect: Allow
                 Action: ssm:*
-                Resource: "*"
+                Resource: '*'
               - Effect: Allow
                 Action: iot:*
-                Resource: "*"
+                Resource: '*'
   WebAppSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupName:
         Fn::Join:
-          - "-"
+          - '-'
           - - webapp-security-group
-            - dev
+            - Ref: env
       GroupDescription: Allow HTTP/HTTPS and SSH inbound and outbound traffic
       SecurityGroupIngress:
         - IpProtocol: tcp
@@ -247,9 +247,9 @@ Resources:
         - Key: Name
           Value:
             Fn::Join:
-              - "-"
+              - '-'
               - - webapp-eip
-                - dev
+                - Ref: env
   BashInstance:
     Type: AWS::EC2::Instance
     CreationPolicy:
@@ -258,7 +258,7 @@ Resources:
     Properties:
       AvailabilityZone:
         Fn::Select:
-          - "0"
+          - '0'
           - Fn::GetAZs:
               Ref: AWS::Region
       SecurityGroupIds:
@@ -271,15 +271,15 @@ Resources:
         - DeviceName: /dev/xvda
           Ebs:
             VolumeType: io1
-            Iops: "200"
-            VolumeSize: "30"
-            Encrypted: "true"
+            Iops: '200'
+            VolumeSize: '30'
+            Encrypted: 'true'
       IamInstanceProfile:
         Ref: BashInstanceProfile
       UserData:
         Fn::Base64:
           Fn::Join:
-            - ""
+            - ''
             - - |
                 #!/bin/bash
               - |
@@ -300,10 +300,6 @@ Resources:
                 sudo git clone
                 https://github.com/hardco2020/ppa_model_script.git
                 /home/ec2-user/ppa/
-              - |
-                bash matlab_pull_and_push.sh ap-southeast-1
-              - |
-                bash gary_pull_and_push.sh ap-southeast-1
               - aws s3 cp training-input/ s3://
               - Ref: S3BucketModelPretrainCreation
               - |
@@ -312,10 +308,10 @@ Resources:
               - Ref: S3BucketPanoramaAppCreation
               - |
                 / --recursive
-              - "/opt/aws/bin/cfn-signal -e 0 --stack "
+              - '/opt/aws/bin/cfn-signal -e 0 --stack '
               - Ref: AWS::StackName
-              - " --resource BashInstance "
-              - " --region "
+              - ' --resource BashInstance '
+              - ' --region '
               - Ref: AWS::Region
               - |+
 
@@ -328,7 +324,7 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
-        Version: "2012-10-17"
+        Version: '2012-10-17'
         Statement:
           - Effect: Allow
             Principal:
@@ -342,7 +338,7 @@ Resources:
       Policies:
         - PolicyName: root
           PolicyDocument:
-            Version: "2012-10-17"
+            Version: '2012-10-17'
             Statement:
               - Effect: Allow
                 Action:
@@ -353,16 +349,20 @@ Resources:
                   - lambda:*
                   - dynamodb:*
                   - ssm:*
-                Resource: "*"
+                Resource: '*'
   BashKey:
     Type: AWS::EC2::KeyPair
     Properties:
-      KeyName: BashKey
+      KeyName:
+        Fn::Join:
+          - '-'
+          - - BashKey
+            - Ref: env
   StateMachineRole:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
-        Version: "2012-10-17"
+        Version: '2012-10-17'
         Statement:
           - Effect: Allow
             Principal:
@@ -374,7 +374,7 @@ Resources:
       Policies:
         - PolicyName: root
           PolicyDocument:
-            Version: "2012-10-17"
+            Version: '2012-10-17'
             Statement:
               - Effect: Allow
                 Action:
@@ -385,12 +385,12 @@ Resources:
                   - lambda:*
                   - dynamodb:*
                   - ssm:*
-                Resource: "*"
+                Resource: '*'
   LambdaRole:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
-        Version: "2012-10-17"
+        Version: '2012-10-17'
         Statement:
           - Effect: Allow
             Principal:
@@ -404,7 +404,7 @@ Resources:
       Policies:
         - PolicyName: root
           PolicyDocument:
-            Version: "2012-10-17"
+            Version: '2012-10-17'
             Statement:
               - Effect: Allow
                 Action:
@@ -415,19 +415,23 @@ Resources:
                   - lambda:*
                   - dynamodb:*
                   - ssm:*
-                Resource: "*"
+                Resource: '*'
   MetricPictrueLambda:
     Type: AWS::Lambda::Function
     Properties:
       Code:
         ImageUri:
           Fn::Join:
-            - ""
+            - ''
             - - Ref: AWS::AccountId
               - >-
                 .dkr.ecr.ap-southeast-1.amazonaws.com/python39-matplotlib-lambda:latest
       PackageType: Image
-      FunctionName: metricToPicture
+      FunctionName:
+        Fn::Join:
+          - '-'
+          - - metricToPicture
+            - Ref: env
       Role:
         Fn::GetAtt:
           - LambdaRole
@@ -438,7 +442,7 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
-        Version: "2012-10-17"
+        Version: '2012-10-17'
         Statement:
           - Effect: Allow
             Principal:
@@ -453,7 +457,7 @@ Resources:
       Policies:
         - PolicyName: root
           PolicyDocument:
-            Version: "2012-10-17"
+            Version: '2012-10-17'
             Statement:
               - Effect: Allow
                 Action:
@@ -466,11 +470,15 @@ Resources:
                   - logs:*
                   - dynamodb:*
                   - states:*
-                Resource: "*"
+                Resource: '*'
   BuildPanoramaApp:
     Type: AWS::CodeBuild::Project
     Properties:
-      Name: Build-Panorama-App
+      Name:
+        Fn::Join:
+          - '-'
+          - - Build-Panorama-App
+            - Ref: env
       Description: Build Panorama App with Panorama Cli
       ServiceRole:
         Fn::GetAtt:
@@ -482,7 +490,7 @@ Resources:
         Type: LINUX_CONTAINER
         ComputeType: BUILD_GENERAL1_LARGE
         Image: aws/codebuild/standard:5.0
-        PrivilegedMode: "true"
+        PrivilegedMode: 'true'
       Source:
         BuildSpec: deployment/buildspec.yaml
         Location: https://github.com/hardco2020/aws-ppe-test1.git
@@ -490,7 +498,11 @@ Resources:
   ModelStateMachine:
     Type: AWS::StepFunctions::StateMachine
     Properties:
-      StateMachineName: Retrain
+      StateMachineName:
+        Fn::Join:
+          - '-'
+          - - Retrain
+            - Ref: env
       DefinitionString:
         Fn::Sub:
           - |
@@ -503,7 +515,7 @@ Resources:
                   "OutputPath": "$.Payload",
                   "Parameters": {
                     "Payload.$": "$",
-                    "FunctionName": "arn:aws:lambda:ap-southeast-1:${AccountId}:function:createTrainingJob-${Env}:$LATEST"
+                    "FunctionName": "arn:aws:lambda:${Region}:${AccountId}:function:createTrainingJob-${Env}:$LATEST"
                   },
                   "Retry": [
                     {
@@ -525,7 +537,7 @@ Resources:
                   "OutputPath": "$.Payload",
                   "Parameters": {
                     "Payload.$": "$",
-                    "FunctionName":"arn:aws:lambda:ap-southeast-1:${AccountId}:function:checkTrainingJobStatus-${Env}:$LATEST"
+                    "FunctionName":"arn:aws:lambda:${Region}:${AccountId}:function:checkTrainingJobStatus-${Env}:$LATEST"
                   },
                   "Retry": [
                     {
@@ -563,7 +575,7 @@ Resources:
                   "OutputPath": "$.Payload",
                   "Parameters": {
                     "Payload.$": "$",
-                    "FunctionName": "arn:aws:lambda:ap-southeast-1:${AccountId}:function:ppaUploadMetricsToS3-${Env}:$LATEST"
+                    "FunctionName": "arn:aws:lambda:${Region}:${AccountId}:function:ppaUploadMetricsToS3-${Env}:$LATEST"
                   },
                   "Retry": [
                     {
@@ -584,7 +596,7 @@ Resources:
                   "Resource": "arn:aws:states:::lambda:invoke",
                   "OutputPath": "$.Payload",
                   "Parameters": {
-                    "FunctionName": "arn:aws:lambda:ap-southeast-1:${AccountId}:function:metricToPicture:$LATEST",
+                    "FunctionName": "arn:aws:lambda:${Region}:${AccountId}:function:metricToPicture:$LATEST",
                     "Payload.$": "$"
                   },
                   "Retry": [
@@ -605,7 +617,7 @@ Resources:
                   "Type": "Task",
                   "Resource": "arn:aws:states:::lambda:invoke.waitForTaskToken",
                   "Parameters": {
-                    "FunctionName": "arn:aws:lambda:ap-southeast-1:${AccountId}:function:triggerCodeBuild-${Env}:$LATEST",
+                    "FunctionName": "arn:aws:lambda:${Region}:${AccountId}:function:triggerCodeBuild-${Env}:$LATEST",
                     "Payload": {
                       "token.$": "$$.Task.Token",
                       "otherInput.$": "$"
@@ -640,6 +652,8 @@ Resources:
               Ref: AWS::AccountId
             Env:
               Ref: env
+            Region:
+              Ref: AWS::Region
             Resource: arn:aws-cn:states:::lambda:invoke
       RoleArn:
         Fn::GetAtt:
@@ -648,7 +662,11 @@ Resources:
   StateMachineParameter:
     Type: AWS::SSM::Parameter
     Properties:
-      Name: /ppe/state/arn
+      Name:
+        Fn::Join:
+          - /
+          - - /ppe/state/arn
+            - Ref: env
       Type: String
       Value:
         Fn::GetAtt:
@@ -661,7 +679,7 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
-        Version: "2012-10-17"
+        Version: '2012-10-17'
         Statement:
           - Effect: Allow
             Principal:
@@ -673,16 +691,20 @@ Resources:
       Policies:
         - PolicyName: root
           PolicyDocument:
-            Version: "2012-10-17"
+            Version: '2012-10-17'
             Statement:
               - Effect: Allow
                 Action:
                   - dynamodb:*
-                Resource: "*"
+                Resource: '*'
   IotTopic:
     Type: AWS::IoT::TopicRule
     Properties:
-      RuleName: ppeEvent
+      RuleName:
+        Fn::Join:
+          - ''
+          - - ppeEvent
+            - Ref: env
       TopicRulePayload:
         Actions:
           - DynamoDB:
@@ -698,10 +720,15 @@ Resources:
                   - Arn
               TableName:
                 Fn::Join:
-                  - "-"
+                  - '-'
                   - - Event
                     - Ref: env
         Description: >-
           Publish IOT topic for Panorama Devices to send alert message to
           Database
-        Sql: SELECT * FROM 'ppe/event'
+        Sql:
+          Fn::Join:
+            - ''
+            - - SELECT * FROM 'ppe/event/
+              - Ref: env
+              - ''''
