--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
 amplify/team-provider-info.json
+amplify/backend/function/cameraLambda/dist/*
